--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "main": "tailwind.config.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": " npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "keywords": [],
   "author": "",
