--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "tailwindcss": "^3.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0",
-    "zod": "^3.22.0"
+    "zod": "^3.22.0",
+    "zxcvbn": "^4.4.2",
+    "@radix-ui/react-tabs": "^1.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
